--- a/src/styles/Movie.css
+++ b/src/styles/Movie.css
@@ -7,12 +7,12 @@
     align-items: center;
     box-shadow: -3px 3px 5px black;
     border-radius: 15px;
-    max-width: 33vw;
+    max-width: 25vw;
     transition: 0.1s;
 }
 
 .movie ul {
-    margin-top: 0.5rem;
+    margin-top: 0.rem;
     margin-bottom: 0.5rem;
     padding: 0;
     display: flex;
@@ -45,7 +45,7 @@
     background-color: #e3e3e3;
 }
 
-@media(max-width: 750px) {
+@media(max-width: 950px) {
     .movie {
         min-width: 75vw;
     }
